# pink-airdrop-snapshot

./: Cargo.toml  README.md  airdrop-list-2024-04-29-07-20-57.csv  airdrop-list-2024-04-29-08-26-52.csv  airdrop-list-2024-04-29-09-00-12.csv  eligible list 2024-04-07 13:22:34.691671 UTC.csv  eligible-list-2024-04-08-14-45-54.csv  eligible-list-2024-04-17-11-06-28.csv  eligible-list-2024-04-18-06-42-36.csv  final-airdrop-list-0.csv  final-airdrop-list-1.csv  final-airdrop-list-2.csv  raw-airdrop-list.csv  snapshot-deposit-eligible-list-2024-04-17-11-06-28.csv  snapshot-deposit-eligible-list-2024-04-18-06-42-36.csv  snapshot-deposit-holders-detail-2024-04-17-11-06-28.csv  snapshot-deposit-holders-detail-2024-04-18-06-42-36.csv  snapshot-kton-eligible-list2024-04-17-11-06-28.csv  snapshot-kton-eligible-list2024-04-18-06-42-36.csv  snapshot-kton-holders-detail-2024-04-18-06-42-36.csv  snapshot-ring-eligible-list-2024-04-17-11-06-28.csv  snapshot-ring-eligible-list-2024-04-18-06-42-36.csv  snapshot-ring-holders-detail-2024-04-18-06-42-36.csv
.github/workflows/: checks.yml  release.yml  staging.yml
src/: cli.rs  format.rs  main.rs  snapshot.rs
