[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = "PINK airdrop snapshot tool."
edition     = "2021"
license     = "GPL-3.0"
name        = "pas"
readme      = "README.md"
repository  = "https://github.com/dcdao/pink-airdrop-snapshot"
version     = "0.4.0"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen = { version = "8.3", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
# crates.io
anyhow             = { version = "1.0" }
array-bytes        = { version = "6.0" }
chrono             = { version = "0.4" }
clap               = { version = "4.5", features = ["derive"] }
color-eyre         = { version = "0.6" }
csv                = { version = "1.3" }
parity-scale-codec = { version = "3.6" }
serde              = { version = "1.0", features = ["derive"] }
subxt              = { version = "0.34" }
tokio              = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
